fixed some invalid methods for goloop